# dylib_dobby_hook

./: .gitignore  CMakeLists.txt  README.md
dylib_dobby_hook/: dobby.h  dylib_dobby_hook.h  dylib_dobby_hook.m
dylib_dobby_hook.xcodeproj/: project.pbxproj
dylib_dobby_hook/apps/: AirBuddyHack.m  CleanShotXHack.m  DevHack.m  DevUtilsHack.m  ForkLiftHack.m  HackProtocol.h  HackProtocolDefault.h  HackProtocolDefault.m  IDAHack.m  InfuseHack.m  MacUpdaterHack.m  NavicatPremiumHack.m  PaddleBaseHack.m  PasteHack.m  ProxyManHack.m  TablePlusHack.m  TransmitHack.m
dylib_dobby_hook/helpers/: ForkLiftHelperHack.m  HackHelperProtocolDefault.h  HackHelperProtocolDefault.m
dylib_dobby_hook/utils/: CommonRetOC.h  CommonRetOC.m  Constant.h  Constant.m  EncryptionUtils.h  EncryptionUtils.m  MemoryUtils.h  MemoryUtils.m  MockCKContainer.h  MockCKContainer.m  MockCKDatabase.h  MockCKDatabase.m  URLSessionHook.h  URLSessionHook.m  common_ret.h  common_ret.m  encryp_utils.h  encryp_utils.m
script/: cmake_debugger.sh  hack.sh  helper.sh  start.sh
script/apps/: forklift_hack.sh  ida_hack.sh
script/apps/IDA/: ida.py
tools/: SMJobBlessUtil-python3.py  dtrace_kill.d  patch.json
